test/tests/compiler/8_loops/invalid_parse/plx1_loop_post_no_block_5.plx
pub fn main(none) i32 {
    i: i32 = 0
    loop while i < 10 .. i = i + 1 
    return 0
}
